Get a mutable list